expressions/expr.output
État 11 conflits: 6 décalage/réduction
État 13 conflits: 6 décalage/réduction
État 24 conflits: 1 décalage/réduction
État 25 conflits: 1 décalage/réduction
État 26 conflits: 1 décalage/réduction
État 27 conflits: 1 décalage/réduction
État 28 conflits: 1 décalage/réduction


Grammaire

    0 $accept: input $end

    1 input: expression TK_END

    2 ligne: TK_MNS TK_VAR
    3      | TK_VAR
    4      | TK_BOOL
    5      | TK_LPAREN ligne TK_RPAREN
    6      | ligne TK_OU ligne
    7      | ligne TK_ET ligne
    8      | ligne TK_XOR ligne
    9      | ligne TK_IMP ligne
   10      | ligne TK_EQIV ligne
   11      | TK_TIL ligne
   12      | TK_COM ligne
   13      | ligne TK_COM

   14 expression: ligne
   15           | expression TK_BN ligne


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
TK_OU (258) 6
TK_ET (259) 7
TK_BN (260) 15
TK_XOR (261) 8
TK_IMP (262) 9
TK_EQIV (263) 10
TK_LPAREN (264) 5
TK_RPAREN (265) 5
TK_TIL (266) 11
TK_MNS (267) 2
TK_END (268) 1
TK_COM (269) 12 13
TK_VAR (270) 2 3
TK_BOOL (271) 4


Non-terminaux, suivis des règles où ils apparaissent

$accept (17)
    à gauche: 0
input (18)
    à gauche: 1, à droite: 0
ligne (19)
    à gauche: 2 3 4 5 6 7 8 9 10 11 12 13, à droite: 5 6 7 8 9 10
    11 12 13 14 15
expression (20)
    à gauche: 14 15, à droite: 1 15


État 0

    0 $accept: . input $end
    1 input: . expression TK_END
    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM
   14 expression: . ligne
   15           | . expression TK_BN ligne

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    input       aller à l'état 7
    ligne       aller à l'état 8
    expression  aller à l'état 9


État 1

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    5      | TK_LPAREN . ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 10


État 2

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   11      | TK_TIL . ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 11


État 3

    2 ligne: TK_MNS . TK_VAR

    TK_VAR  décalage et aller à l'état 12


État 4

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   12      | TK_COM . ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 13


État 5

    3 ligne: TK_VAR .

    $défaut  réduction par utilisation de la règle 3 (ligne)


État 6

    4 ligne: TK_BOOL .

    $défaut  réduction par utilisation de la règle 4 (ligne)


État 7

    0 $accept: input . $end

    $end  décalage et aller à l'état 14


État 8

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM
   14 expression: ligne .  [TK_BN, TK_END]

    TK_OU    décalage et aller à l'état 15
    TK_ET    décalage et aller à l'état 16
    TK_XOR   décalage et aller à l'état 17
    TK_IMP   décalage et aller à l'état 18
    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 14 (expression)


État 9

    1 input: expression . TK_END
   15 expression: expression . TK_BN ligne

    TK_BN   décalage et aller à l'état 21
    TK_END  décalage et aller à l'état 22


État 10

    5 ligne: TK_LPAREN ligne . TK_RPAREN
    6      | ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_OU      décalage et aller à l'état 15
    TK_ET      décalage et aller à l'état 16
    TK_XOR     décalage et aller à l'état 17
    TK_IMP     décalage et aller à l'état 18
    TK_EQIV    décalage et aller à l'état 19
    TK_RPAREN  décalage et aller à l'état 23
    TK_COM     décalage et aller à l'état 20


État 11

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   11      | TK_TIL ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_EQIV, TK_RPAREN, TK_END, TK_COM]
   13      | ligne . TK_COM

    TK_OU    décalage et aller à l'état 15
    TK_ET    décalage et aller à l'état 16
    TK_XOR   décalage et aller à l'état 17
    TK_IMP   décalage et aller à l'état 18
    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    TK_OU     [réduction par utilisation de la règle 11 (ligne)]
    TK_ET     [réduction par utilisation de la règle 11 (ligne)]
    TK_XOR    [réduction par utilisation de la règle 11 (ligne)]
    TK_IMP    [réduction par utilisation de la règle 11 (ligne)]
    TK_EQIV   [réduction par utilisation de la règle 11 (ligne)]
    TK_COM    [réduction par utilisation de la règle 11 (ligne)]
    $défaut  réduction par utilisation de la règle 11 (ligne)


État 12

    2 ligne: TK_MNS TK_VAR .

    $défaut  réduction par utilisation de la règle 2 (ligne)


État 13

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   12      | TK_COM ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_EQIV, TK_RPAREN, TK_END, TK_COM]
   13      | ligne . TK_COM

    TK_OU    décalage et aller à l'état 15
    TK_ET    décalage et aller à l'état 16
    TK_XOR   décalage et aller à l'état 17
    TK_IMP   décalage et aller à l'état 18
    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    TK_OU     [réduction par utilisation de la règle 12 (ligne)]
    TK_ET     [réduction par utilisation de la règle 12 (ligne)]
    TK_XOR    [réduction par utilisation de la règle 12 (ligne)]
    TK_IMP    [réduction par utilisation de la règle 12 (ligne)]
    TK_EQIV   [réduction par utilisation de la règle 12 (ligne)]
    TK_COM    [réduction par utilisation de la règle 12 (ligne)]
    $défaut  réduction par utilisation de la règle 12 (ligne)


État 14

    0 $accept: input $end .

    $défaut  accepter


État 15

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    6      | ligne TK_OU . ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 24


État 16

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    7      | ligne TK_ET . ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 25


État 17

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    8      | ligne TK_XOR . ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 26


État 18

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
    9      | ligne TK_IMP . ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 27


État 19

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   10      | ligne TK_EQIV . ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 28


État 20

   13 ligne: ligne TK_COM .

    $défaut  réduction par utilisation de la règle 13 (ligne)


État 21

    2 ligne: . TK_MNS TK_VAR
    3      | . TK_VAR
    4      | . TK_BOOL
    5      | . TK_LPAREN ligne TK_RPAREN
    6      | . ligne TK_OU ligne
    7      | . ligne TK_ET ligne
    8      | . ligne TK_XOR ligne
    9      | . ligne TK_IMP ligne
   10      | . ligne TK_EQIV ligne
   11      | . TK_TIL ligne
   12      | . TK_COM ligne
   13      | . ligne TK_COM
   15 expression: expression TK_BN . ligne

    TK_LPAREN  décalage et aller à l'état 1
    TK_TIL     décalage et aller à l'état 2
    TK_MNS     décalage et aller à l'état 3
    TK_COM     décalage et aller à l'état 4
    TK_VAR     décalage et aller à l'état 5
    TK_BOOL    décalage et aller à l'état 6

    ligne  aller à l'état 29


État 22

    1 input: expression TK_END .

    $défaut  réduction par utilisation de la règle 1 (input)


État 23

    5 ligne: TK_LPAREN ligne TK_RPAREN .

    $défaut  réduction par utilisation de la règle 5 (ligne)


État 24

    6 ligne: ligne . TK_OU ligne
    6      | ligne TK_OU ligne .  [TK_OU, TK_BN, TK_RPAREN, TK_END, TK_COM]
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_ET    décalage et aller à l'état 16
    TK_XOR   décalage et aller à l'état 17
    TK_IMP   décalage et aller à l'état 18
    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    TK_COM    [réduction par utilisation de la règle 6 (ligne)]
    $défaut  réduction par utilisation de la règle 6 (ligne)

    Conflit entre la règle 6 et le jeton TK_OU résolu par réduction (%left TK_OU).
    Conflit entre la règle 6 et le jeton TK_ET résolu par décalage (TK_OU < TK_ET).
    Conflit entre la règle 6 et le jeton TK_XOR résolu par décalage (TK_OU < TK_XOR).
    Conflit entre la règle 6 et le jeton TK_IMP résolu par décalage (TK_OU < TK_IMP).
    Conflit entre la règle 6 et le jeton TK_EQIV résolu par décalage (TK_OU < TK_EQIV).


État 25

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    7      | ligne TK_ET ligne .  [TK_OU, TK_ET, TK_BN, TK_RPAREN, TK_END, TK_COM]
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_XOR   décalage et aller à l'état 17
    TK_IMP   décalage et aller à l'état 18
    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    TK_COM    [réduction par utilisation de la règle 7 (ligne)]
    $défaut  réduction par utilisation de la règle 7 (ligne)

    Conflit entre la règle 7 et le jeton TK_OU résolu par réduction (TK_OU < TK_ET).
    Conflit entre la règle 7 et le jeton TK_ET résolu par réduction (%left TK_ET).
    Conflit entre la règle 7 et le jeton TK_XOR résolu par décalage (TK_ET < TK_XOR).
    Conflit entre la règle 7 et le jeton TK_IMP résolu par décalage (TK_ET < TK_IMP).
    Conflit entre la règle 7 et le jeton TK_EQIV résolu par décalage (TK_ET < TK_EQIV).


État 26

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    8      | ligne TK_XOR ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_RPAREN, TK_END, TK_COM]
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_IMP   décalage et aller à l'état 18
    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    TK_COM    [réduction par utilisation de la règle 8 (ligne)]
    $défaut  réduction par utilisation de la règle 8 (ligne)

    Conflit entre la règle 8 et le jeton TK_OU résolu par réduction (TK_OU < TK_XOR).
    Conflit entre la règle 8 et le jeton TK_ET résolu par réduction (TK_ET < TK_XOR).
    Conflit entre la règle 8 et le jeton TK_XOR résolu par réduction (%left TK_XOR).
    Conflit entre la règle 8 et le jeton TK_IMP résolu par décalage (TK_XOR < TK_IMP).
    Conflit entre la règle 8 et le jeton TK_EQIV résolu par décalage (TK_XOR < TK_EQIV).


État 27

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
    9      | ligne TK_IMP ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_RPAREN, TK_END, TK_COM]
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM

    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    TK_COM    [réduction par utilisation de la règle 9 (ligne)]
    $défaut  réduction par utilisation de la règle 9 (ligne)

    Conflit entre la règle 9 et le jeton TK_OU résolu par réduction (TK_OU < TK_IMP).
    Conflit entre la règle 9 et le jeton TK_ET résolu par réduction (TK_ET < TK_IMP).
    Conflit entre la règle 9 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_IMP).
    Conflit entre la règle 9 et le jeton TK_IMP résolu par réduction (%left TK_IMP).
    Conflit entre la règle 9 et le jeton TK_EQIV résolu par décalage (TK_IMP < TK_EQIV).


État 28

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   10      | ligne TK_EQIV ligne .  [TK_OU, TK_ET, TK_BN, TK_XOR, TK_IMP, TK_EQIV, TK_RPAREN, TK_END, TK_COM]
   13      | ligne . TK_COM

    TK_COM  décalage et aller à l'état 20

    TK_COM    [réduction par utilisation de la règle 10 (ligne)]
    $défaut  réduction par utilisation de la règle 10 (ligne)

    Conflit entre la règle 10 et le jeton TK_OU résolu par réduction (TK_OU < TK_EQIV).
    Conflit entre la règle 10 et le jeton TK_ET résolu par réduction (TK_ET < TK_EQIV).
    Conflit entre la règle 10 et le jeton TK_XOR résolu par réduction (TK_XOR < TK_EQIV).
    Conflit entre la règle 10 et le jeton TK_IMP résolu par réduction (TK_IMP < TK_EQIV).
    Conflit entre la règle 10 et le jeton TK_EQIV résolu par réduction (%left TK_EQIV).


État 29

    6 ligne: ligne . TK_OU ligne
    7      | ligne . TK_ET ligne
    8      | ligne . TK_XOR ligne
    9      | ligne . TK_IMP ligne
   10      | ligne . TK_EQIV ligne
   13      | ligne . TK_COM
   15 expression: expression TK_BN ligne .  [TK_BN, TK_END]

    TK_OU    décalage et aller à l'état 15
    TK_ET    décalage et aller à l'état 16
    TK_XOR   décalage et aller à l'état 17
    TK_IMP   décalage et aller à l'état 18
    TK_EQIV  décalage et aller à l'état 19
    TK_COM   décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 15 (expression)
